test/eof/shadowrule_05.c
/* Generated by re2c */
// re2c $INPUT -o $OUTPUT -ci -Wno-error-deprecated-eof-rule



// no error/warning, both rules are reachable

{
	YYCTYPE yych;
	{ empty }
	{ eof }
}


// error: unreachable rule eof

{
	YYCTYPE yych;
	{ empty }
}


// error: unreachable rule eof2

{
	YYCTYPE yych;
	{ eof1 }
}


// warning: unreachable empty, error - unreachable eof

{
	YYCTYPE yych;
	goto yy3;
yy4:
	++YYCURSOR;
yy3:
yyFillLabel0:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy4;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel0;
			}
			goto yy5;
	}
yy5:
	{ a }
}




// use block
//   c1: error: *-eof-2 shadowed by c1-empty, error: *-eof shadowed by c1-empty
//   c2: error: *-eof-2 shadowed by *-eof, *-a shadowed by c2-a but not reported because it's reachable in other conditions
//   c3: warning: *-eof-2 shadowed by c3-eof, *-eof shadowed by c3-eof but not reported because it's reachable in c1
//   c4: warning: *-eof-2 shadowed by c4-eof, error: c4-eof-2 shadowed by c4-eof

{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
		case yycc4: goto yyc_c4;
		case yycc1: goto yyc_c1;
		case yycc2: goto yyc_c2;
		case yycc3: goto yyc_c3;
	}
/* *********************************** */
yyc_c4:
yyFillLabel1:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy8;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel1;
				goto yy9;
			}
			goto yy7;
	}
yy7:
	++YYCURSOR;
	{ c4-default }
yy8:
	++YYCURSOR;
	{ *-a }
yy9:
	{ c4-eof }
/* *********************************** */
yyc_c1:
yyFillLabel2:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy12;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel2;
			}
			goto yy11;
	}
yy11:
	{ c1-empty }
yy12:
	++YYCURSOR;
	{ *-a }
/* *********************************** */
yyc_c2:
yyFillLabel3:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy15;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel3;
				goto yy16;
			}
			goto yy14;
	}
yy14:
	++YYCURSOR;
	{ c2-default }
yy15:
	++YYCURSOR;
	{ c2-a }
yy16:
	{ *-eof }
/* *********************************** */
yyc_c3:
yyFillLabel4:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy19;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel4;
				goto yy20;
			}
			goto yy18;
	}
yy18:
	++YYCURSOR;
	{ c3-default }
yy19:
	++YYCURSOR;
	{ *-a }
yy20:
	{ c3-eof }
}


// use directive
//   c1: error: *-eof-2 shadowed by c1-empty, error: *-eof shadowed by c1-empty
//   c2: error: *-eof-2 shadowed by *-eof, *-a shadowed by c2-a but not reported because it's reachable in other conditions
//   c3: warning: *-eof-2 shadowed by c3-eof, *-eof shadowed by c3-eof but not reported because it's reachable in c1
//   c4: warning: *-eof-2 shadowed by c4-eof, error: c4-eof-2 shadowed by c4-eof

{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
		case yycc4: goto yyc_c4;
		case yycc1: goto yyc_c1;
		case yycc2: goto yyc_c2;
		case yycc3: goto yyc_c3;
	}
/* *********************************** */
yyc_c4:
yyFillLabel5:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy23;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel5;
				goto yy24;
			}
			goto yy22;
	}
yy22:
	++YYCURSOR;
	{ c4-default }
yy23:
	++YYCURSOR;
	{ *-a }
yy24:
	{ c4-eof }
/* *********************************** */
yyc_c1:
yyFillLabel6:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy27;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel6;
			}
			goto yy26;
	}
yy26:
	{ c1-empty }
yy27:
	++YYCURSOR;
	{ *-a }
/* *********************************** */
yyc_c2:
yyFillLabel7:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy30;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel7;
				goto yy31;
			}
			goto yy29;
	}
yy29:
	++YYCURSOR;
	{ c2-default }
yy30:
	++YYCURSOR;
	{ c2-a }
yy31:
	{ *-eof }
/* *********************************** */
yyc_c3:
yyFillLabel8:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy34;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (YYFILL() == 0) goto yyFillLabel8;
				goto yy35;
			}
			goto yy33;
	}
yy33:
	++YYCURSOR;
	{ c3-default }
yy34:
	++YYCURSOR;
	{ *-a }
yy35:
	{ c3-eof }
}

eof/shadowrule_05.re:16:7: warning: unreachable end-of-input rule at line 16 (shadowed by rule at line 15) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:20:0: warning: control flow is undefined for strings that match '[\x0-\xFF]', use default rule '*' [-Wundefined-control-flow]
eof/shadowrule_05.re:22:7: warning: unreachable end-of-input rule at line 22 (shadowed by rule at line 21) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:27:9: warning: rule matches empty string [-Wmatch-empty-string]
eof/shadowrule_05.re:28:9: warning: unreachable rule (shadowed by rule at line 27) [-Wunreachable-rules]
eof/shadowrule_05.re:29:9: warning: unreachable end-of-input rule at line 29 (shadowed by rule at line 27) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:53:13: warning: unreachable end-of-input rule at line 53 in condition 'c4' (shadowed by rule at line 36) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:33:12: warning: unreachable end-of-input rule at line 33 in condition 'c1' (shadowed by rule at line 45) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:56:13: warning: unreachable end-of-input rule at line 56 in condition 'c1' (shadowed by rule at line 33) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:56:13: warning: unreachable end-of-input rule at line 56 in condition 'c2' (shadowed by rule at line 33) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:56:13: warning: unreachable end-of-input rule at line 56 in condition 'c4' (shadowed by rule at line 36) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:56:13: warning: unreachable end-of-input rule at line 56 in condition 'c3' (shadowed by rule at line 50) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:75:13: warning: unreachable end-of-input rule at line 75 in condition 'c4' (shadowed by rule at line 36) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:33:12: warning: unreachable end-of-input rule at line 33 in condition 'c1' (shadowed by rule at line 67) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:78:13: warning: unreachable end-of-input rule at line 78 in condition 'c1' (shadowed by rule at line 33) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:78:13: warning: unreachable end-of-input rule at line 78 in condition 'c2' (shadowed by rule at line 33) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:78:13: warning: unreachable end-of-input rule at line 78 in condition 'c4' (shadowed by rule at line 36) [-Wdeprecated-eof-rule]
eof/shadowrule_05.re:78:13: warning: unreachable end-of-input rule at line 78 in condition 'c3' (shadowed by rule at line 72) [-Wdeprecated-eof-rule]
